specs/requests/valid/017.http
GET /stuff/here?foo=bar HTTP/1.0

If-Match: bazinga!

If-Match: large-sound



