specs/requests/invalid/015.http
POST /stuff/here?foo=bar HTTP/1.0

CONTENT-LENGTH: bla-bla-bla



{"test": "-1}